# convert_to_quant

./: .git-blame-ignore-revs  .gitignore  ACTIVATIONS.md  ACTIVE.md  AGENTS.md  AGENT_OPTIMIZER_SCHEDULER_RULES.md  BNB_4BIT_LOADER_IMPLEMENTATION_PLAN.md  CALIBRATED_FP8_PLAN.md  DEVELOPMENT.md  INFERENCE.md  MANUAL.md  MIXED_FORMAT_PLAN.md  PLANNED.md  README.md  REFACTOR_REPORT.md  analyze_code_structure.py  legacy_convert_script.py  pyproject.toml  rename_quant_format.py  repair_nvfp4_metadata.py  requirements.txt  setup.py
.github/workflows/: build-wheels.yml
convert_to_quant/: __init__.py  api.py  calibrate_activation_scales.py  constants.py  convert_to_quant.py  pinned_transfer.py  routing.py
convert_to_quant/cli/: __init__.py  argument_parser.py  main.py  run_sdnq.py
convert_to_quant/comfy/: __init__.py  _int8_kernels_fallback.py  float.py  int8_kernels.py  nf4_kernels.py  quant_ops.py
convert_to_quant/config/: __init__.py  layer_config.py
convert_to_quant/converters/: __init__.py  base_converter.py  constants.py  convergence.py  int8_converter.py  learned_mxfp8.py  learned_nvfp4.py  learned_rounding.py  learned_svdquant_w4a4.py  metadata.py  mxfp8_converter.py  nvfp4_converter.py  sdnq_math.py  sdnq_transform.py  svdquant_w4a4_converter.py  wiwi_opt.py
convert_to_quant/formats/: __init__.py  format_migration.py  fp8_conversion.py  hybrid_mxfp8_conversion.py  int8_conversion.py  legacy_utils.py  mxfp8_conversion.py  nvfp4_conversion.py  sdnq_conversion.py  svdquant_w4a4_conversion.py
convert_to_quant/utils/: __init__.py  comfy_quant.py  convrot.py  float_utils.py  logging.py  memory_efficient_loader.py  tensor_utils.py
docs/: FORMATS.md  SDNQ_LAYOUT_SPEC.md
docs/sdnq_implementation/: REFACTOR_PLAN.md  REFINED_PLAN.md  ROBUST_ALIGNMENT_PLAN.md  TASK_1_INSTRUCTIONS.md  TASK_2_INSTRUCTIONS.md  TASK_3_INSTRUCTIONS.md  TASK_4_INSTRUCTIONS.md
quant_refs/: RESEARCH_REPORT.md  comfyui.md  local_analysis.md  reference_status.md  remote_sdnq_converter.py  summaries.md
tests/: QUANTIZATION_ERROR_MEASUREMENT.md  QUANTIZATION_ERROR_TOOLS_SUMMARY.md  README.md  README_QUANTIZATION_ERROR.md  characterization.py  compare_convrot_error_metrics.py  diagnose_standstill.py  evaluate_quantized_models.py  example_quantization_error.py  measure_quantization_error.py  quickstart_quantization_error.py  reproduce_lr.py  test_auto_tuning.py  test_cli_consistency.py  test_conversion_characterization.py  test_convrot.py  test_custom_layers_fpmm_and_bias_opt.py  test_dispatch_contract.py  test_dry_run.py  test_filter_flags.py  test_functional.py  test_hybrid_mxfp8.py  test_int8_row_convrot.py  test_int8_rowwise_fix.py  test_int8_tensorwise.py  test_learned_svdquant_w4a4.py  test_lora_extraction.py  test_metadata.py  test_model_filter_registry.py  test_module_usage.py  test_nibble_order.py  test_oom_recovery.py  test_recover_lora_script.py  test_routing.py  test_svdquant_w4a4_converter.py  verify_sdnq_cli.py
