[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convert_to_quant"
version = "1.0.7"
description = "Convert safetensors weights to quantized formats (FP8, INT8) with learned rounding optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quantization", "fp8", "int8", "machine-learning", "pytorch", "comfyui"]
dependencies = []

[project.optional-dependencies]
triton = ["triton>=2.1.0"]
triton-windows = ["triton-windows>=3.3, <3.6"]
dev = ["pytest", "ruff"]

[project.scripts]
convert_to_quant = "convert_to_quant.convert_to_quant:main"
convert-to-quant = "convert_to_quant.convert_to_quant:main"
ctq = "convert_to_quant.convert_to_quant:main"
sdnq = "convert_to_quant.cli.run_sdnq:main"

[project.urls]
Repository = "https://github.com/silveroxides/convert_to_quant"

[tool.setuptools.packages.find]
where = ["."]
include = ["convert_to_quant*"]
