[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convert_to_quant"
version = "1.1.5"
description = "Convert safetensors weights to quantized formats (FP8, INT8) with learned rounding optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quantization", "fp8", "int8", "machine-learning", "pytorch", "comfyui"]
dependencies = ["prodigy-plus-schedule-free"]

[project.optional-dependencies]
# Triton version must match installed torch version.
# torch>=2.12 -> triton<3.7 (or triton-windows<3.7)
# torch>=2.11 -> triton<3.6 (or triton-windows<3.6)
# torch>=2.10 -> triton<3.5 (or triton-windows<3.5)
# Install with: pip install -U "triton<3.7" or pip install -U "triton-windows<3.7"
triton = ["triton>=2.1.0"]
triton-windows = ["triton-windows>=3.3"]
prodigy = ["prodigy-plus-schedule-free"]
dev = ["pytest"]

[project.scripts]
convert_to_quant = "convert_to_quant.convert_to_quant:main"
convert-to-quant = "convert_to_quant.convert_to_quant:main"
ctq = "convert_to_quant.convert_to_quant:main"

[project.urls]
Repository = "https://github.com/silveroxides/convert_to_quant"

[tool.setuptools.packages.find]
where = ["."]
include = ["convert_to_quant*"]
