[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convert_to_quant"
version = "1.2.8"
description = "Convert safetensors weights to quantized formats (FP8, INT8) with learned rounding optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["quantization", "fp8", "int8", "machine-learning", "pytorch", "comfyui"]
dependencies = ["prodigy-plus-schedule-free"]

[project.optional-dependencies]
# Triton version must match installed torch version.
# torch>=2.12 -> triton<3.7 (or triton-windows<3.7)
# torch>=2.11 -> triton<3.6 (or triton-windows<3.6)
# torch>=2.10 -> triton<3.5 (or triton-windows<3.5)
# Install with: pip install -U "triton<3.7" or pip install -U "triton-windows<3.7"
triton = ["triton>=2.1.0"]
triton-windows = ["triton-windows>=3.3"]
prodigy = ["prodigy-plus-schedule-free"]
dev = ["pytest"]

[project.scripts]
convert_to_quant = "convert_to_quant.convert_to_quant:main"
convert-to-quant = "convert_to_quant.convert_to_quant:main"
ctq = "convert_to_quant.convert_to_quant:main"

[project.urls]
Repository = "https://github.com/silveroxides/convert_to_quant"

[tool.setuptools.packages.find]
where = ["."]
include = ["convert_to_quant*"]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.isort]
line_length = 64
profile = "black"
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true

[tool.yapf]
based_on_style = "pep8"
column_limit = 128
split_all_comma_separated_values = false
split_before_named_assigns = false
dedent_closing_brackets = true
join_multiple_lines = false
indent_width = 4
